feat: get users endpoint fix: homepage page filtering
